categories to category

--- a/source/_posts/2019-09-30-hexo-qu.md
+++ b/source/_posts/2019-09-30-hexo-qu.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hexo list
 date: 2019-09-30 
-categories: Blog
+category: Blog
 description: 深入理解 Hexo
 keywords: hexo, BLOG
 ---
