--- a/source/_posts/2019-04-04-qingming.md
+++ b/source/_posts/2019-04-04-qingming.md
@@ -2,7 +2,7 @@
 layout: post
 title: 清明假期记录
 date: 2019-04-04 23:58:05
-categories: Blog
+category: Blog
 description: 清明假期
 keywords: 2018, BLOG
 ---
