add <!--more--> for posts

--- a/source/_posts/2019-04-04-qingming.md
+++ b/source/_posts/2019-04-04-qingming.md
@@ -7,6 +7,8 @@ keywords: 2018, BLOG
 ---
 > 就这样清明假期就悄然开始了，从前些天起就跟我这俩dd室友讨论去哪玩，北京、天津、河南、青岛都想过，由于时间跟开支原因我们最终还是定下了来爬泰山（去年高考完跟同学爬过一次的。
 
+<!--more-->
+
 # 4/4 下午开始爬山 #
 
     不留字，只上图。
