--- a/source/_posts/2019-09-30-hexo-qu.md
+++ b/source/_posts/2019-09-30-hexo-qu.md
@@ -11,3 +11,5 @@ keywords: hexo, BLOG
 1.  未在 `front` 中指定日期的，将在每一次渲染后自动生成为当前日期。
 2.  _config.yml 文件中的  `timeline`  配置中 `word` 中不会渲染 Markdown 格式。
 3.  _config.yml 文件中的  `timeline`  配置中 `word` 中不能使用 `:` ，否则会出发错误 (暂。
+
+<!--more-->
