--- a/source/_posts/2019-10-17-jinkuang.md
+++ b/source/_posts/2019-10-17-jinkuang.md
@@ -5,10 +5,11 @@ date: 2019-10-17
 categories: Blog
 ---
 
-1. ~~我一向都是不发脾气的。小时候不懂事在家里经常因为一些事情跟妈妈吵架，长大后明白，那都是因为自己的不懂事情，所以有些事情自己该明白不了，但是自从长大了以后就没有再跟妈妈顶过嘴。在外面，我觉得自己不能这么「任着别人」，因为我比他们都年龄都大一些（有的甚至我都比他大一岁，我一直都是让着他们，不管他们做了多么出格的事，在我看来，我就应该让着他们一点。就最近来看，我觉得我必须给自己一个底线了，不能任由他们这样闹着玩。~~
+
+~~我一向都是不发脾气的。小时候不懂事在家里经常因为一些事情跟妈妈吵架，长大后明白，那都是因为自己的不懂事情，所以有些事情自己该明白不了，但是自从长大了以后就没有再跟妈妈顶过嘴。在外面，我觉得自己不能这么「任着别人」，因为我比他们都年龄都大一些（有的甚至我都比他大一岁，我一直都是让着他们，不管他们做了多么出格的事，在我看来，我就应该让着他们一点。就最近来看，我觉得我必须给自己一个底线了，不能任由他们这样闹着玩。~~
 <!--more -->
-2. 最近压力有点大，一是四级快要到了，然而我还没有做好充足的准备来应考，再最近做实验做的我有点迷糊，最后一次的结晶学实验，还有第一次的矿物学实验，都做的我有点懵，主要是兴趣有点淡，有点枯燥，但还是那句话，自己选择的路，再难也得走下去。
-3. 最近学习的压力有很大一部分来自我最近的学习方式，我前两个学期都是不怎么在学习上花时间的，都是平时上课的时候好好听，然后做做作业，到了考试的时候再好好复习就够了，可是现在，感觉宿舍每个人都在用功的学习，我也迫使自己每天跟着室友去学习，为什么说是迫使呢，因为我不想这么做，我就是想啥时候愿意就去学一会，啥时候不想学就不学。可是我现在看着他们都这么用功，我如果再不学习，我就很慌，虽然我知道，这样整天泡在外面的学习方式要率不高，甚至说是很低 对于我来说，但是我又不敢在放松，恐怕赶不上他们，我很难，一是不知道怎么办，我要怎么办？
+最近压力有点大，一是四级快要到了，然而我还没有做好充足的准备来应考，再最近做实验做的我有点迷糊，最后一次的结晶学实验，还有第一次的矿物学实验，都做的我有点懵，主要是兴趣有点淡，有点枯燥，但还是那句话，自己选择的路，再难也得走下去。
+最近学习的压力有很大一部分来自我最近的学习方式，我前两个学期都是不怎么在学习上花时间的，都是平时上课的时候好好听，然后做做作业，到了考试的时候再好好复习就够了，可是现在，感觉宿舍每个人都在用功的学习，我也迫使自己每天跟着室友去学习，为什么说是迫使呢，因为我不想这么做，我就是想啥时候愿意就去学一会，啥时候不想学就不学。可是我现在看着他们都这么用功，我如果再不学习，我就很慌，虽然我知道，这样整天泡在外面的学习方式要率不高，甚至说是很低 对于我来说，但是我又不敢在放松，恐怕赶不上他们，我很难，一是不知道怎么办，我要怎么办？
 4. 整天脑子胡思乱想的。
 
 🌃🌌🌉睡了，晚安。
