--- a/source/_posts/2019-04-04-qingming.md
+++ b/source/_posts/2019-04-04-qingming.md
@@ -14,20 +14,20 @@ keywords: 2018, BLOG
     不留字，只上图。
 
 *上山开始*
-![](https://blog.api2u.cn/images/posts/qingming/img1.jpg)
+![](/images/posts/qingming/img1.jpg)
 
 
 *打卡南天门*
-![](https://blog.api2u.cn/images/posts/qingming/img2.jpg)
+![](/images/posts/qingming/img2.jpg)
 
 # 5/4 凌晨观日出 #
 
 *日出前的火烧云*
-![](https://blog.api2u.cn/images/posts/qingming/img3.jpg)
+![](/images/posts/qingming/img3.jpg)
 
 
 *由于雾太大，刚露头的太阳*
-![](https://blog.api2u.cn/images/posts/qingming/img4.jpg)
+![](/images/posts/qingming/img4.jpg)
 
 下午回学校，睡了一下午。
 
